style(mobile): fix header styles on mobile

--- a/public/stylesheets/header.css
+++ b/public/stylesheets/header.css
@@ -68,3 +68,8 @@ header a:hover {
   display: inline-block;
 }
 
+@media only screen and (max-width: 700px) {
+  .primary-header.row {
+    flex-flow: column;
+  }
+}
